--- a/css/main.css
+++ b/css/main.css
@@ -806,7 +806,7 @@ img {
     display: block;
     font-size: 14px;
     font-weight: 500;
-    color: #6a6a6a;
+    color: #8b8585;
     text-decoration: none;
     padding: 19px 13px;
     text-align: right; }
