--- a/css/main.css
+++ b/css/main.css
@@ -896,6 +896,12 @@ img {
 .hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner:after, .hamburger.is-active .hamburger-inner:before {
   background-color: #c52a85; }
 
+@media screen and (max-width: 1500px) {
+  .virtual-exhibition {
+    background-position: right 50% center;
+  }
+}
+
 @media screen and (max-width: 1365px) {
   main {
     width: 100%;
